--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,26 +7,10 @@ and open the template in the editor.
 <html>
 
 <head>
-    <!-- Include the data adapter -->
-    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-core.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-data-adapter.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-base.min.js"></script>
     <!--CDN stuff-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!--jQuery-->
-    <script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <!--Bootstrap JS-->
-    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
-        integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
-        crossorigin="anonymous"></script>
-    {% block scripts %}{% endblock %}
-    <!--Local stuff-->
-    <script defer src={{ url_for('static', filename='js/main.js')}}></script>
-    <link rel="stylesheet" href={{ url_for('static', filename='css/main.css')}}>
-
-    <title>Data Visualiser</title>
+    <title>Wreckvee</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -56,10 +40,6 @@ and open the template in the editor.
             </ul>
         </div>
     </nav>
-
-    <header class="jumbotron text-center">
-        {% block header %}{% endblock %}
-    </header>
     <main class="container">
         <section class="row" id="tablerow">
             <div class="col-sm-12" id="tablediv">
@@ -73,6 +53,13 @@ and open the template in the editor.
             </div>
         </section>
     </main>
+    <!--jQuery-->
+    <script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!--Bootstrap JS-->
+    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+        integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
+        crossorigin="anonymous"></script>
 </body>
 <footer class="container">
     <p><em>Copyright &copy; 2020 Data Visualiser.</em></p>
