Added connect page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,17 @@
 {% extends "layout.html" %}
 {% block main %}
-<section id="features">
-    <h2>Our Features!</h2>
+<div class="container">
     <div class="row">
-    <article class="col-sm">
-        <h3>Upload your own data</h3>                    
-        <figure>
-            <img class="img-thumbnail" id="Upload" src={{ url_for('static', filename='images/UploadYourOwnData.jpg')}} alt="Upload Your Own Data">
-        </figure>
-        <p>
-            Upload any data you want! No restrictions!
-        </p>
-    </article>
-    <article class="col-sm">
-        <h3>See the data you want</h3>
-        <figure>
-            <img class="img-thumbnail" id="See" src={{ url_for('static', filename='images/SeeTheDataYouWant.jpg')}} alt="See the data you want"/>
-        </figure>
-        <p>
-            You get the choice to see all of your data or the data that you want to see!
-        </p>
-    </article>
+        <div class="col-md-6">
+            <div class="card">
+                <form onsubmit="event.preventDefault()" class="box">
+                    <h1>Connect To Car</h1>
+                    <p class="text-muted"> Please enter the IP address shown on your Robotic Car!!</p>
+                    <input type="text" name="" placeholder="IP-Address">
+                    <input type="submit" name="" value="Connect" href="#">
+                </form>
+            </div>
+        </div>
     </div>
-</section>
-<section id="features2">
-    <div class="row">
-    <article class="col-sm">
-        <h3>Visuals</h3>
-        <figure>
-            <img class="img-thumbnail" id="graph" src={{ url_for('static', filename='images/Graph.jpg')}} alt="Graph"/>
-        </figure>
-        <p>
-            You get the option to see raw data or a graph of your selected data!
-        </p>
-    </article>
-    <article class="col-sm">
-        <h3>Export</h3>
-        <figure>
-            <img class="img-thumbnail" id="export" src={{ url_for('static', filename='images/export.jpg')}} alt="Export"/>
-        </figure>
-        <p>
-            Once you're happy with your selected data, you can export it again!
-        </p>
-    </article>
-    </div>
-</section>
+</div>
 {% endblock %}
