--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,45 +3,43 @@
 <head>
     <!--CDN stuff-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
           integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-    <link rel="stylesheet" href={{ url_for('static', filename='css/main.css')}}>
+    {% block css %}{% endblock %}
     <title>Wreckvee</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand"><img src={{ url_for('static', filename='images/data.ico')}} /></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <a class="navbar-brand"><img src={{ url_for('static', filename='images/data.ico')}} /></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">WreckVee</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <main class="container-fluid">
-        <section>
-<!--            <div class="">-->
-                {% block main %}{%endblock%}
-                {% block results_main %}{%endblock%}
-<!--            </div>-->
-        </section>
-    </main>
-    <!--jQuery-->
-    <script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="/index.html">WreckVee</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<main>
+    {% block main %}{%endblock%}
+    {% block results_main %}{%endblock%}
+</main>
+{% block scripts %}{% endblock %}
+<!--jQuery-->
+<script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <!--Bootstrap JS-->
-    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+<!--Bootstrap JS-->
+<script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
         integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
         crossorigin="anonymous"></script>
+
 </body>
 <footer>
 </footer>
