edited navbar, added challenge1

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <!--CDN stuff-->
@@ -24,6 +24,19 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/index.html">WreckVee</a>
             </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a class="mr-2 nav-link" href="dashboard.html"> Dashboard</a></li>
+            <li class="dropdown">
+                <a class="mr-5 nav-link dropdown-toggle" data-toggle="dropdown" href="#">Challenges <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="challenge1.html">Challenge 1</a></li>
+                    <li><a class="dropdown-item" href="#">Challenge 2</a></li>
+                    <li><a class="dropdown-item" href="#">Challenge 3</a></li>
+                </ul>
+            </li>
+
+
         </ul>
     </div>
 </nav>
