--- a/templates/challenge1.html
+++ b/templates/challenge1.html
@@ -6,9 +6,9 @@
 {% endblock %}
 {% block main %}
 <header>
-    <div class="p-5 text-center bg-light">
-        <h1 class="mb-3">Dashboard</h1>
-    </div>
+<div class="p-5 text-center bg-light">
+    <h1 class="mb-3">Challenge 1</h1>
+</div>
 </header>
 <div id="content" style="display:flex;">
   <div>
