--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,15 +27,8 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a class="mr-2 nav-link" href="dashboard.html"> Dashboard</a></li>
-            <li class="dropdown">
-                <a class="mr-5 nav-link dropdown-toggle" data-toggle="dropdown" href="#">Challenges <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="challenge1.html">Challenge 1</a></li>
-                    <li><a class="dropdown-item" href="#">Challenge 2</a></li>
-                    <li><a class="dropdown-item" href="#">Challenge 3</a></li>
-                </ul>
-            </li>
-
+            <li><a class="mr-5 nav-link" href="#"> Challenges</a></li>
+           
 
         </ul>
     </div>
