Included new custom code block

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,6 @@
 </nav>
 <main>
     {% block main %}{%endblock%}
-    {% block results_main %}{%endblock%}
 </main>
 {% block scripts %}{% endblock %}
 <!--jQuery-->
@@ -42,5 +41,6 @@
 
 </body>
 <footer>
+{% block footerscript %}{% endblock %}
 </footer>
 </html>
