Adding header, shifting things and testing CSS

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,17 @@
 <script defer src={{ url_for( 'static', filename='js/movement.js')}}></script>
 {% endblock %}
 {% block main %}
-<div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
+<header>
+	<div class="p-3 text-center bg-light">
+		<h1 class="mb-1">Dashboard</h1>
+	</div>
+</header>
+
+<div style="position:relative; float:left; top:20px; left:20px">
+<h1>Test</h1>
+</div>
+<!--Coding Environment Opening-->
+<div id="blocklyDiv" style="height: 480px; width: 600px; float: right; position: relative; top: 20px; right: 20px;">
 <xml id="toolbox" style="display: none">
   <block type="controls_if"></block>
   <block type="controls_repeat_ext"></block>
@@ -16,8 +26,10 @@
   <block type="text"></block>
   <block type="text_print"></block>
   <block type="turn_right"></block>
-
 </xml>
+</div>
+<!--Coding Environment Closing-->
+
 
 {% endblock %}
 
