updated to display

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,49 +6,127 @@
 <script defer src={{ url_for( 'static', filename='js/movement.js')}}></script>
 {% endblock %}
 {% block main %}
+
 <style>
-	.top-wrapper{
-	display:grid;
-	grid-template-columns: 50% 50%;
-	grid-column-gap:1em;
-	}
-	.top-wrapper > div{
-	background:#eee;
-	padding:1em;
-	}
-	.top-wrapper > div:nth-child(odd){
-	background:#ddd;
-	}
+    .button{
+        border: none;
+        color: white;
+        padding: 1px 32px;
+        text-align: center;
+        text-decoration:none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 8px;
+    }
+    .wrapper{
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap:1em;
+    }
+    .carStatus{
+        justify-self: center;
+        align-self: center;
+        grid-column:2/3;
+    }
+    .ResetRun{
+        grid-column:3/4;
+        justify-self:end;
+        padding-right:2em;
+    }
+    .topWrap{
+        justify-self: start;
+        aligh-self: center;
+        grid-column:3/5;
+    }
+    .sensorStats{
+        justify-self: center;
+        display:grid;
+        grid-column: 2/3;
+        grid-row: 3/4;
+        grid-template-rows:1fr 2fr;
+        justify-self:start;
+    }
+    .sensorNested {
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        border: black 1px solid;
+        align-self:center;
+        justify-self:center;
+        padding-left:1em;
+        padding-right:1em;
+    }
+    .pastHistory{
+        display:grid;
+        grid-column:2/4;
+        grid-row:4/6;
+        justify-self: stretch;
+    }
+    .pastNested{
+        display:grid;
+        grid-template-columns: 8fr 1fr;
+    }
+    .historyListing{
+        display:grid;
+        grid-column:1/4;
+        border:black 1px solid;
+        align-self: stretch;
+        grid-auto-rows:300px;
+    }
 </style>
-<header>
-	<div class="p-3 text-center bg-light">
-		<h1 class="mb-1">Dashboard</h1>
-	</div>
+
+<header style="background-color:#F3F1DA">
+    <div class="p-3 text-center">
+	<h1 class="mb-1">Dashboard</h1>
+    </div>
 </header>
 
-<div class="top-wrapper">
-	<div>
-	<h1>Test</h1>
-	</div>
-	<!--Coding Environment Opening-->
-	<div id="blocklyDiv" style="height: 480px; width: 600px;">
-	<xml id="toolbox" style="display: none">
-	  <block type="controls_if"></block>
-	  <block type="controls_repeat_ext"></block>
-	  <block type="logic_compare"></block>
-	  <block type="math_number"></block>
-	  <block type="math_arithmetic"></block>
-	  <block type="text"></block>
-	  <block type="text_print"></block>
-	  <block type="turn_right"></block>
-	</xml>
-	</div>
-	<!--Coding Environment Closing-->
-</div>
+<body style="background-color:#F3F1DA">
+    <div class="wrapper topWrap">
+        <div class="carStatus">
+            <h1>CAR STOPPED</h1>
+        </div>
+            <!--Coding Environment Opening-->
+        <div class="blockyLand topWrap" id="blocklyDiv" style="height: 480px; width: 600px;">
+            <xml id="toolbox" style="display: none">
+                <block type="controls_if"></block>
+                <block type="controls_repeat_ext"></block>
+                <block type="logic_compare"></block>
+                <block type="math_number"></block>
+                <block type="math_arithmetic"></block>
+                <block type="text"></block>
+                <block type="text_print"></block>
+                <block type="turn_right"></block>
+            </xml>
+        </div>
+            
+        <div class="ResetRun">
+            <div></div>
+            <button class="button" style="background-color: grey;">Reset</button>
+            <button class="button" style="background-color: red;">Run</button>
+        </div>
+            <!--Coding Environment Closing-->
+        <div class="sensorStats">
+            <div>Real Time Data:</div>
+            <div class="sensorNested">
+                <div>Speed: 0m/s</div>
+                <div>Orientation: Stationary</div>
+                <div>Distance: 0m</div>
+            </div>
+        </div>
 
+        <div class="pastHistory">
+            <div class="pastNested">
+            <div>Past Instruction:</div>
+            <button class="button" style="background-color: #008CBA;">Run</button>
+            <div class="historyListing">Insert past instruction thingies</div>
+            </div>
+        </div>
+    </div>
+</body>
 
 {% endblock %}
-
 {% block footerscript %}
 <script defer src={{ url_for( 'static', filename='js/main.js')}}></script>
 {% endblock %}
