--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a class="mr-2 nav-link" href="dashboard.html"> Dashboard</a></li>
-            <li><a class="mr-5 nav-link" href="#"> Challenges</a></li>
+            <li><a class="mr-5 nav-link" href="viewchallenges.html"> Challenges</a></li>
            
 
         </ul>
