added individual challenges pg

--- a/templates/viewchallenges.html
+++ b/templates/viewchallenges.html
@@ -28,7 +28,7 @@
                     <p class="card-text">
                         Now, after getting the basic concepts of programming, try out Challenge 2 with a slightly more challenging maze. Have Fun!
                     </p>
-                    <a href="#" class="btn btn-primary">Go to Challenge 2</a>
+                    <a href="/challenge2.html" class="btn btn-primary">Go to Challenge 2</a>
                 </div>
             </div>
 
@@ -40,7 +40,7 @@
                         In Challenge 3, a more complex maze with a slightly advanced programming is set for you. Try it out and Have Fun!
                     </p>
                     <br />
-                    <a href="#" class="btn btn-primary">Go to Challenge 3</a>
+                    <a href="/challenge3.html" class="btn btn-primary">Go to Challenge 3</a>
                 </div>
             </div>
 
