--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block css %}
-<link rel="stylesheet" href={{ url_for('static', filename='css/main.css')}}>
+<link rel="stylesheet" href={{ url_for('static', filename='css/connect.css')}}>
 {% endblock %}
 {% block main %}
 <div class="container">
