Added hints functionality - opens a modal , added tootips for all challenges - used as tutorial

--- a/templates/challenge3.html
+++ b/templates/challenge3.html
@@ -7,6 +7,7 @@
 <script src="blockly_compressed.js"></script>
 <script src="blocks_compressed.js"></script>
 <script defer src={{ url_for( 'static', filename='js/movement.js')}}></script>
+<script defer src={{ url_for( 'static', filename='js/challenge.js')}}></script>
 {% endblock %}
 {% block main %}
 <header style="background-color:#F3F1DA">
@@ -16,30 +17,53 @@
 </header>
 
 <body style="background-color:#F3F1DA">
-    <main class="container">
-        <div class="row">
-            <div class="col">
-                <img class="img-fluid" src="static/images/challenge3.png" alt="Challenge3 image">
+<main class="container">
+    <div class="row">
+        <div class="col">
+            <img class="img-fluid" src="static/images/challenge3.png" alt="Challenge3 image" data-toggle="tooltip"
+                 data-placement="top" title="Complete the challenge using the map">>
+        </div>
+        <div class="col">
+            <!--Coding Environment Opening-->
+            <div class="blockyLand" id="blocklyDiv" data-toggle="tooltip" data-placement="top"
+                 title="Drag and drop blocks of instructions from the left to the workspace on the right">
+                <xml id="toolbox" style="display: none">
+                    <block type="controls_repeat_ext"></block>
+                    <block type="turn_right"></block>
+                    <block type="turn_left"></block>
+                    <block type="move_forward"></block>
+                </xml>
             </div>
-            <div class="col">
-                <!--Coding Environment Opening-->
-                <div class="blockyLand" id="blocklyDiv">
-                    <xml id="toolbox" style="display: none">
-                        <block type="controls_repeat_ext"></block>
-                        <block type="turn_right"></block>
-                        <block type="turn_left"></block>
-                        <block type="move_forward"></block>
-                    </xml>
+            <button class="button btn-success" onclick="clearworkspace()">
+                <a data-toggle="tooltip" data-placement="bottom" title="Click to clear the workspace">Reset</a>
+            </button>
+            <button class="button btn-danger" onclick="runCode()">
+                <a data-toggle="tooltip" data-placement="bottom" title="Click to execute the blocks of instructions">Run</a>
+            </button>
+            <button class="button btn-warning" data-toggle="modal" data-target="#myModal">
+                <a data-toggle="tooltip" data-placement="bottom" title="Click for hints">Hint</a>
+            </button>
+            <!-- Modal -->
+            <div id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Hint for Challenge #3</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <p><b>There are 5 blocks required to complete the challenge</b></p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
                 </div>
-                    <button class="button" onclick="clearworkspace()" style="background-color: grey;">Reset</button>
-                    <button class="button" onclick="runCode()" style="background-color: red;">Run</button>
-              
             </div>
         </div>
-
-        <!--Coding Environment Closing-->
-
-    </main>
+    </div>
+</main>
 </body>
 
 {% endblock %}
