--- a/templates/challenge3.html
+++ b/templates/challenge3.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% set active_page = "challenge" %}
 {% block css %}
 <link rel="stylesheet" href={{ url_for('static', filename='css/blockly.css')}}>
 {% endblock %}
@@ -11,7 +12,7 @@
 {% endblock %}
 {% block main %}
 <header style="background-color:#F3F1DA">
-    <div class="p-5 text-center">
+    <div class="p-3 text-center">
         <h1 class="mb-3">Challenge 3</h1>
     </div>
 </header>
