--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% set active_page = "dashboard" %}
 {% block css %}
 <link rel="stylesheet" href={{ url_for('static', filename='css/blockly.css')}}>
 <link rel="stylesheet" href={{ url_for('static', filename='css/dashboard.css')}}>
