--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,6 @@
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
@@ -26,10 +25,8 @@
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a class="mr-2 nav-link" href="dashboard.html"> Dashboard</a></li>
-            <li><a class="mr-5 nav-link" href="viewchallenges.html"> Challenges</a></li>
-           
-
+            <li><a class="mr-2 nav-link {{ 'active' if active_page == 'dashboard' else '' }}" href="dashboard.html"> Dashboard</a></li>
+            <li><a class="mr-5 nav-link {{ 'active' if active_page == 'challenge' else '' }}" href="viewchallenges.html"> Challenges</a></li>
         </ul>
     </div>
 </nav>
@@ -46,6 +43,6 @@
 {% block scripts %}{% endblock %}
 </body>
 <footer>
-{% block footerscript %}{% endblock %}
+    {% block footerscript %}{% endblock %}
 </footer>
 </html>
