--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,7 @@
                     <h1>Connect To Car</h1>
                     <p class="text-muted"> Please enter the IP address shown on your Robotic Car!!</p>
                     <input type="text" name="ip" id="ip" placeholder="IP-Address"
-                    pattern = "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$";
->
+                    pattern = "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$";>
                     <input type="submit" name="" value="Connect">
                 </form>
             </div>
