--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,8 +25,9 @@
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a class="mr-2 nav-link {{ 'active' if active_page == 'dashboard' else '' }}" href="dashboard.html"> Dashboard</a></li>
-            <li><a class="mr-5 nav-link {{ 'active' if active_page == 'challenge' else '' }}" href="viewchallenges.html"> Challenges</a></li>
+            <li><a class="mr-2 nav-link {{ 'active' if active_page == 'dashboard' else '' }}" href="dashboard.html">Dashboard</a></li>
+            <li><a class="mr-5 nav-link {{ 'active' if active_page == 'challenge' else '' }}" href="viewchallenges.html">Challenges</a></li>
+            <li><a href="index.html" class="btn btn-info"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
         </ul>
     </div>
 </nav>
