--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,14 +20,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            {% if session != 1 %}
             <li class="nav-item active">
                 <a class="nav-link" href="/index.html">WreckVee</a>
             </li>
+            {% endif %}
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a class="mr-2 nav-link {{ 'active' if active_page == 'dashboard' else '' }}" href="dashboard.html">Dashboard</a></li>
             <li><a class="mr-5 nav-link {{ 'active' if active_page == 'challenge' else '' }}" href="viewchallenges.html">Challenges</a></li>
+            {% if session == 1 %}
             <li><a href="index.html" class="btn btn-info"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+            {% endif %}
         </ul>
     </div>
 </nav>
