--- a/templates/challenge1.html
+++ b/templates/challenge1.html
@@ -30,6 +30,7 @@
                  title="Drag and drop blocks of instructions from the left to the workspace on the right">
                 <xml id="toolbox" style="display: none">
                     <block type="controls_repeat_ext"></block>
+                    <block type="math_number"></block>
                     <block type="turn_right"></block>
                     <block type="turn_left"></block>
                     <block type="move_forward"></block>
