Added checking answer for all challenges with pop up for correct and wrong answers

--- a/templates/challenge1.html
+++ b/templates/challenge1.html
@@ -63,6 +63,34 @@
                     </div>
                 </div>
             </div>
+            <div id="completedModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Congrats, You have completed Challenge #1</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p><b>This is a very simple maze. The next one will be more complex! ;)</b></p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-info" data-dismiss="modal">Redo</button>
+                            <a href="/challenge2.html" class="btn btn-primary">Next Challenge</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="wrongModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Wrong. Please Try again!! </h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </main>
